--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 # ~~~ Just Http Things ~~~
 requests==2.24.0
+colorama==0.4.3
+
+# ~~~ artificial intelligence ~~~
+aitextgen==0.2.2
 spacy==2.3.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz#egg=en_core_web_sm
+spacy-lookups-data==0.3.2
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.0/en_core_web_sm-2.3.0.tar.gz#egg=en_core_web_sm
 
 # ~~~ dist and such ~~~
 pypandoc==1.1.3
